refactor: update default colors